--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #a73ee4;
+  background-color: #554463;
   padding: 5px;
   margin: 5px;
 }
@@ -24,22 +24,22 @@ body {
 }
 
 .App-paper {
-  background-color: darkviolet;
+  background-color: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
 }
 
 .App-content {
-  background-color: #282c34;
+  background-color: #554463;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
 }
 
 .App-link {
-  color: #61dafb;
+  color: linear-gradient(45deg, #2196F3 30%, #21CBF3 90%);
 }
 
 @keyframes App-logo-spin {
